courseware-generator/v119/outline-guidance.md
# 课件大纲生成指南

本文件指导 AI 完成课件大纲的完整生成流程：从信息确认到逐页课件大纲输出。执行本流程时，AI 应以课件大纲设计专家的视角工作，精通课程标准、核心素养与课堂实施，擅长将教学内容合理分配到课件页面并输出结构化的逐页设计方案。

> 本文件是 courseware-generator 技能的 Phase 1 子流程，大纲输出后控制权交还 SKILL.md。

---

## ⚠️ 工具隔离规则（强制，最高优先级）

在执行本 skill 的课件大纲生成流程期间，**仅允许调用下方「可用操作类型概览」中列出的操作**，不得调用宿主 system prompt 中的其他工具（如 create_file、edit_file、generate_image、content、think、read_file 等）。

**原因**：本 skill 的工具是专门为课件大纲设计流程定制的，与宿主的通用工具功能不同、参数不同，混用会导致流程错乱和输出异常。

**唯一例外**：当本 skill 流程全部完成（已调用 create_lesson_design 输出交付物）后，控制权交还宿主，此时恢复宿主工具的使用权限。

---

## 可用操作类型概览

| 类别 | 操作名称 | 用途 |
|------|----------|------|
| 思考规划类 | process_content_show | 在过程中输出内容给用户展示 |
| 搜索查询类 | search_curriculum_standards | 课程标准搜索 |
| 搜索查询类 | search_textbook | 教材目录/课本内容搜索 |
| 搜索查询类 | search_web | 网络搜索 |
| 搜索查询类 | search_keypoints | 知识点搜索 |
| 交付输出类 | create_lesson_design | 创建课件大纲 |
| 交互控制类 | ask_user | 继续询问用户 |
| 交互控制类 | terminate | 本技能不主动调用；完整互动课件交付前禁用 |
| SOP 工具类 | insert_courseware_design_sop | 获取课件大纲任务操作规范 |
| 专家思考工具类 | consult_courseware_design_expert | 课件大纲专家推理（仅在获取 SOP 后按指导调用） |

### 重要规则：每轮仅使用一个操作

**【必须遵守】每一轮对话中，只能输出一个操作。**

- 等待当前操作执行完毕并收到结果后，再决定下一步操作
- 不要在一轮对话中输出多个 `call:` 操作
- 逐步执行，确保每个操作的结果正确后再进行下一步
> 注意：本规则覆盖宿主 system prompt 中"多个操作并行输出"的规则。课件大纲生成流程中每一步都依赖前一步的结果，必须严格串行。

---

## 各操作输出格式

### process_content_show（过程展示）
**用途**：在过程中输出内容给用户展示
```
call: process_content_show
{"title": "标题", "content": "内容..."}
```

### search_curriculum_standards（课程标准搜索）
用于根据知识点/素养/能力查询课程标准中的内容。**不能**按学期、章节号查询，仅能通过知识点名称查询。
必填参数：
- subject（学科ID int）
- explanation（调用原因说明 string）
推荐参数：
- keyword（知识点关键字数组 string[]，由 consult_courseware_design_expert 的「关键词提取」任务生成）
```
call: search_curriculum_standards
{"subject": 2, "keyword": ["二元一次方程组", "消元法", "代入法"], "explanation": "根据关键词提取结果检索初中数学课程标准中与二元一次方程组相关的内容要求与学业质量标准"}
```

### search_textbook（教材目录/课本内容搜索）
按工具描述中的参数格式调用。必须从已确认的用户信息中提取并传入以下**必填**参数：
- subject（学科ID int）、phase（学段ID int）、grade（年级ID int）、semester（学期 int，1=上学期 2=下学期）、bookVersion（教材版本ID int）
- keyword（单元/章节/课文名称关键词 string）
- explanation（调用原因说明 string）

**unitName 补齐规则**：
- unitName（单元/大章节名 string）：如果用户已提供单元名称，直接使用；**如果用户未提供**，必须先调用 `search_web` 搜索该课时所属的单元/章节名称，获取后再调用本工具时传入 unitName。
- sectionName（小节/课文/课时名 string）：从用户提供的课时内容中提取。

⚠️ **禁止在 unitName 未知时直接调用本工具**。unitName 对检索精度至关重要，缺少它会导致返回错误章节的内容。
```
call: search_textbook
{"subject": 2, "phase": 2, "grade": 7, "semester": 2, "bookVersion": 1, "keyword": "二元一次方程组", "explanation": "检索七年级下册人教版数学第四章教材内容", "unitName": "第四章 二元一次方程组", "sectionName": "消元法解方程组"}
```

### search_web（网络搜索）
按工具描述中的参数格式调用。

### search_keypoints（知识点搜索）
按工具描述中的参数格式调用。

### create_lesson_design（创建课件大纲）
**用途**：生成课件大纲交付物
按工具描述中的参数格式调用。

### ask_user（继续询问）
**用途**：需要用户提供更多信息时
调用要求：
- 信息确认阶段统一使用 `SINGLE_CHOICE` 和 `MULTIPLE_CHOICE`，**不要**使用 `question`
- 所有选择题字段统一设置 `allowCustomAnswer=true`
- 所有 `SINGLE_CHOICE` 字段必须至少提供 2 个 `options`；若只能推断出 1 个有效选项，第二个选项必须使用 `其他（请说明）`
- 信息确认阶段只展示规定的 9 项字段，禁止额外新增 `学科` 字段；学科可从课时内容、教材版本或用户输入中推断，用于后续工具参数
- 若宿主或工具强制要求展示 `学科` 字段，也必须提供至少 2 个选项，如 `数学` / `其他（请说明）`，禁止只给 `数学` 一个选项
- 当内容包含多个并列要点（如教学重点）时，必须拆成多个独立选项，使用 `MULTIPLE_CHOICE`
- 系统会自动追加通用补充问题，不要额外设计“其他需求”“补充说明”等兜底字段
- Phase 1 首次信息确认 `ask_user` 必须作为单独 tool_call 发出，禁止与 `insert_courseware_design_sop`、搜索、专家咨询或 `create_lesson_design` 同轮并发
- 如果 `ask_user` 返回参数不合法，下一步只能修正表单并重试 `ask_user`，禁止继续任何后续流程或结束任务

### terminate（结束任务）
**用途**：本技能不主动调用。Phase 1 完成 `create_lesson_design` 后控制权交还 SKILL.md；完整互动课件发布前禁止调用。
```
call: terminate
{}
```

### insert_courseware_design_sop（获取课件大纲任务操作规范）
**用途**：获取课件大纲设计的 SOP 任务操作规范，规范中包含了每一步应该做什么和需要使用的工具
```
call: insert_courseware_design_sop
{"explanation": "解释", "userInput": "用户输入"}
```
**返回值**：该工具会根据用户的学科/学段/教材版本自动路由到对应分支，返回两个关键字段：
- `expertSop`：SOP 操作规范正文（指导后续每一步做什么、用什么工具）
- `expertId`：整数，标识学科专家分支，后续调用 consult_courseware_design_expert 时必须原样传入

**⚠️ expertId 由本工具自动生成，禁止模型自行编造或猜测。** 完整的 expertId 与学科对应关系如下（仅供理解，实际以工具返回值为准）：

| expertId | 学科分支 |
|----------|----------|
| 1101 | 小学语文 |
| 1201 | 小学数学（人教版） |
| 1203 | 小学数学（非人教版） |
| 1301 | 小学英语（人教版） |
| 1303 | 小学英语（非人教版） |
| 2000 | 通用/其他 |
| 2101 | 初中语文 |
| 2201 | 初中数学（人教版） |
| 2203 | 初中数学（非人教版） |
| 2301 | 初中英语（人教版） |
| 2303 | 初中英语（非人教版） |
| 2401 | 初中物理（人教版） |
| 2403 | 初中物理（非人教版） |

### consult_courseware_design_expert（课件大纲专家推理）
**用途**：按照 SOP 的指导逐步调用，每次执行一个任务步骤。专家会根据任务名称自动匹配对应的输入/输出规范，之前步骤的输出通过对话历史自动传递给专家，无需手动传入数据。
```
call: consult_courseware_design_expert
{"explanation": "执行课标解读任务", "expertId": 2201, "expertTask": "课标解读"}
```

**参数说明**：

| 参数 | 类型 | 说明 |
|------|------|------|
| explanation | 字符串 | 本次调用的目的说明 |
| expertId | 整数 | 必须使用 insert_courseware_design_sop 返回的 expertId，原样传入 |
| expertTask | 字符串 | **纯任务名称**，必须从下表 6 个值中选取，与 SOP 步骤中指定的 task_name 完全一致 |

**expertTask 有效值（仅限以下 6 个，严禁自行编造）**：

| expertTask 值 | 对应 SOP 步骤 | 说明 |
|---------------|--------------|------|
| 关键词提取 | Step 1 | 生成课标检索关键词 |
| 课标解读 | Step 1 | 解读课程标准 |
| 教材内容分析 | Step 2 | 分析教材内容与知识结构 |
| 学情分析 | Step 3 | 分析学生学情 |
| 目标与重难点 | Step 4 | 拟定学习目标与重难点 |
| 逐页内容设计 | Step 5 | 生成逐页课件大纲 |

**⚠️ 强制规则**：
- `expertId`：必须且只能使用 insert_courseware_design_sop 返回的 expertId，禁止自行推断或编造
- `expertTask`：只传任务名称（如 "课标解读"），不要把输入数据放进去；之前步骤的输出（如课标数据、教材分析结果等）通过对话历史自动传递给专家
- 严格按 SOP 指定的顺序逐步调用，不要跳步
- 若 insert_courseware_design_sop 尚未调用，则必须先调用 insert_courseware_design_sop

---

## 附件检测与解析

在执行信息确认机制之前，必须先检测用户消息中是否包含附件（图片、文件等）。

### 检测规则

- 如果用户上传了**图片**（教案照片、课件截图等）：利用多模态能力读取图片内容，提取其中的教学相关信息（教学目标、教学重难点、教学过程、教学活动、课时安排等）
- 如果用户上传了**文本/文档文件**：通过 `read_file` 或 `read_url` 读取内容
- 如果**没有附件**：跳过本步骤，直接进入信息确认机制

### 附件类型判定

提取内容后，判断附件属于以下哪种类型：

| 类型 | 判定依据 | 标记 |
|------|---------|------|
| **教案类** | 内容以文字为主，包含教学目标、教学过程、重难点等教学设计文本 | `material_type = "lesson_plan"` |

### 提取与缓存

将从附件中提取的完整内容缓存为 `teacher_material`（老师的原始资料），提取时保留原始表述和结构，不做加工改写。

#### 教案类附件提取内容（`material_type = "lesson_plan"`）

`teacher_material` 中应尽量识别以下内容（有多少提取多少）：
- 课时内容/课题名称
- 年级
- 册次
- 教材版本
- 教学目标（知识目标、能力目标、情感态度价值观目标等）
- 教学重点与难点
- 教学过程/教学活动设计
- 课时安排
- 授课类型
- 学情分析
- 其他教学设计内容


---

## 信息确认机制

为确保课件大纲设计精准又省心，在接到用户需求后，必须调用 `ask_user` 工具，执行 **智能提问指令** 流程：

### 智能提问指令

★ 总原则：结合用户的首次输入（以及附件提取内容），将所有 9 项字段预填后统一展示给用户确认，让用户觉得提问的内容很贴心、懂教学、详细专业。
★ 使用时机：仅在用户的首次输入时，在具体规划执行前必须提问；一旦开始规划或执行，说明本硬闸门已经完成，不再重复提问。
★ 硬闸门：除读取/提取用户附件信息外，任何 SOP、课标检索、教材检索、专家分析或大纲生成工具之前，都必须先完成本信息确认表单。不存在“无需确认”的场景。

#### ① 必须确认的 9 项字段

以下字段**每次都必须展示给用户确认**，即使已从附件或用户输入中提取到值，也要展示预填值让用户核实：

| 序号 | 字段 | 说明 | 示例 |
|------|------|------|------|
| 1 | 课时内容 | 本课时的具体教学内容 | 二元一次方程组 |
| 2 | 年级 | 学段+年级 | 七年级 |
| 3 | 册次 | 上册/下册 | 下册 |
| 4 | 教材版本 | 出版社版本（语文学科默认统编版，但仍需以“统编版 / 其他版本”形式确认） | 人教版 |
| 5 | 教学重点 | 根据课时内容预生成至少 3 条并列的教学重点供用户选择或修改，作为灵感启发 | 见下方说明 |
| 6 | 课时数 | 本内容计划授课的课时数量 | 1 课时 |
| 7 | 授课类型 | 新授课/复习课/练习课/实验课/阅读课等 | 新授课 |
| 8 | 课件页数范围 | AI 根据课时内容和教案复杂度预估 3 档页数范围，供用户选择或调整 | 推荐 15-18 页 |
| 9 | 班级学情 | 优秀/中等/相对薄弱 | 中等 |

**教学重点预生成规则**：根据用户提供的课时内容（及附件中的信息），AI 须基于学科知识预生成**至少 3 条**可能的教学重点，以编号列表形式展示，供老师选择、修改或补充。老师可以直接选用、组合多条、或自行填写。

**课件页数范围预估规则**：AI 须根据老师需求、课时内容、教案环节数量、互动设计复杂度，先推测一个**最可能的页数范围**，再在其两侧各给出一个相邻范围，形成 3 档建议：
- 三档范围须连续、相邻、无重叠，其中中间一档为 AI 认为最合适的范围
- 面向用户展示时，直接展示 3 个页数范围供用户选择或调整
- 用户未明确选择时，默认采用**中间一档**
- 用户确认页数范围后，AI 在正式撰写大纲前必须先确定一个**具体页数**，该页数必须落在用户已选择的区间内；后续逐页设计、create_lesson_design 和 HTML 生成均以这个具体页数为准

#### ② 字段预填优先级

每个字段按以下优先级确定预填值（优先级从高到低）：

1. **用户文字输入中明确提供的值**
2. **附件（teacher_material）中提取的值**
3. **LLM 推断值**（如从课时名称推断年级、册次、授课类型等；教学重点须根据课时内容预生成至少 3 条）
4. **默认值**（如课时数默认 1、班级学情默认中等）

#### ③ 表单题型设计原则

- **信息确认阶段的 9 项字段全部使用选择题呈现**，禁止使用 `OPEN_ENDED`
- **所有选择题字段统一设置 `allowCustomAnswer=true`**，保证老师可在任何字段上直接修正 AI 的预填内容
- **所有 `SINGLE_CHOICE` 字段必须至少 2 个选项**：即使某字段只有 1 个高置信预填值，也必须追加 `其他（请说明）`，禁止发送只有 1 个 `options` 的单选字段
- **只展示 9 项字段，不新增 `学科` 字段**：学科由课时内容和教材版本推断后用于后续工具参数；若宿主强制展示学科，也必须按 `数学` / `其他（请说明）` 这样的双选项形式生成
- 并列选项应该与预填值的口径统一，比如不能同时出现`初中一年级` / `八年级`这些口径不一致的选项，且选项中必须包含预填选项
- `课时内容`：使用 `SINGLE_CHOICE`，提供当前最可能的课时内容选项，并追加 `其他（请说明）`，开启 `allowCustomAnswer=true`
- `年级`：使用 `SINGLE_CHOICE`，提供当前学段内的多个候选年级，默认选中推断值
- `册次`：使用 `SINGLE_CHOICE`，提供 `上册` / `下册` / `全一册（如适用）`
- `教材版本`：使用 `SINGLE_CHOICE`，提供当前最可能版本及同学科常见版本；若语文学科默认为统编版，也必须补充 `其他版本（请说明）`
- `教学重点`：使用 `MULTIPLE_CHOICE`，将预生成的每条重点拆为独立选项，至少提供 3 条，可多选
- `课时数`：使用 `SINGLE_CHOICE`，提供 1 课时 / 2 课时 / 3 课时 / 4 课时及以上 等常见选项，默认选中 `1课时`
- `授课类型`：使用 `SINGLE_CHOICE`，提供新授课 / 复习课 / 练习课 / 实验课 / 阅读课等选项
- `课件页数范围`：使用 `SINGLE_CHOICE`，提供 AI 预估的 3 个页数范围选项，默认选中中间一档
- `班级学情`：使用 `SINGLE_CHOICE`，提供优秀 / 中等 / 相对薄弱 等选项
- 系统会自动追加通用补充问题，不要在信息确认表单中再额外设计“其他需求”“补充说明”等兜底字段

#### ④ 任务语境前缀
- 用一句口语化前缀点明任务主题与帮助价值：
  - 教案附件时：「我已仔细阅读了您上传的教案，提取了以下信息，请确认或修改：」
  - 无附件时：「为了让课件大纲真正契合您的课堂…」

#### ⑤ 确认表单生成
- **所有 9 项字段都必须展示**，已有预填值的直接填入，未获取到的附示例引导。
- 将所有字段合并为一次提问，避免多轮追问。
- 表单字段应优先让老师点选，而非手输；同时所有选择题字段统一开启 `allowCustomAnswer=true`
- 本 `ask_user` 是课件信息确认表单，必须发生在 `insert_courseware_design_sop` 之前；不要把它和 Phase 2 的“大纲确认 ask_user”混为一谈。

统一示例（有附件/无附件仅 `explanation` 话术不同，其余 `formFields` 结构一致）：
```
call: ask_user
{
  "explanation": "根据是否已读取老师附件，分别使用对应的话术前缀；随后展示同一套信息确认表单。",
  "formFields": [
    {
      "label": "课时内容",
      "type": "SINGLE_CHOICE",
      "options": [
        { "label": "二元一次方程组——消元法解方程组", "value": "二元一次方程组——消元法解方程组" },
        { "label": "其他（请说明）", "value": "其他（请说明）" }
      ],
      "defaultValue": "二元一次方程组——消元法解方程组",
      "allowCustomAnswer": true
    },
    {
      "label": "年级",
      "type": "SINGLE_CHOICE",
      "options": [
        { "label": "七年级", "value": "七年级" },
        { "label": "八年级", "value": "八年级" }
      ],
      "defaultValue": "七年级",
      "allowCustomAnswer": true
    },
    {
      "label": "册次",
      "type": "SINGLE_CHOICE",
      "options": [
        { "label": "上册", "value": "上册" },
        { "label": "下册", "value": "下册" }
      ],
      "defaultValue": "下册",
      "allowCustomAnswer": true
    },
    {
      "label": "教材版本",
      "type": "SINGLE_CHOICE",
      "options": [
        { "label": "人教版", "value": "人教版" },
        { "label": "北师大版", "value": "北师大版" }
      ],
      "defaultValue": "人教版",
      "allowCustomAnswer": true
    },
    {
      "label": "教学重点",
      "type": "MULTIPLE_CHOICE",
      "description": "以下为预生成的重点建议，可多选",
      "options": [
        { "label": "掌握代入消元法的基本步骤与适用条件", "value": "掌握代入消元法的基本步骤与适用条件" },
        { "label": "掌握加减消元法的基本步骤与适用条件", "value": "掌握加减消元法的基本步骤与适用条件" },
        { "label": "能根据方程组特征灵活选择消元方法", "value": "能根据方程组特征灵活选择消元方法" }
      ],
      "defaultValues": [
        "掌握代入消元法的基本步骤与适用条件",
        "能根据方程组特征灵活选择消元方法"
      ],
      "allowCustomAnswer": true
    },
    {
      "label": "课时数",
      "type": "SINGLE_CHOICE",
      "options": [
        { "label": "1 课时", "value": "1课时" },
        { "label": "2 课时", "value": "2课时" },
        { "label": "3 课时", "value": "3课时" }
      ],
      "defaultValue": "1课时",
      "allowCustomAnswer": true
    },
    {
      "label": "授课类型",
      "type": "SINGLE_CHOICE",
      "options": [
        { "label": "新授课", "value": "新授课" },
        { "label": "复习课", "value": "复习课" },
        { "label": "练习课", "value": "练习课" },
        { "label": "实验课", "value": "实验课" }
      ],
      "defaultValue": "新授课",
      "allowCustomAnswer": true
    },
    {
      "label": "课件页数范围",
      "type": "SINGLE_CHOICE",
      "description": "我先按内容量为您预估了 3 个范围",
      "options": [
        { "label": "12-14 页", "value": "12-14页" },
        { "label": "15-18 页", "value": "15-18页" },
        { "label": "19-22 页", "value": "19-22页" }
      ],
      "defaultValue": "15-18页",
      "allowCustomAnswer": true
    },
    {
      "label": "班级学情",
      "type": "SINGLE_CHOICE",
      "options": [
        { "label": "优秀", "value": "优秀" },
        { "label": "中等", "value": "中等" },
        { "label": "相对薄弱", "value": "相对薄弱" }
      ],
      "defaultValue": "中等",
      "allowCustomAnswer": true
    }
  ]
}
```

#### ⑥ ask_user 调用失败恢复

- 若 `ask_user` 返回参数不合法、字段类型错误、`options` 数量不足等错误，必须立即修正同一张信息确认表单并再次调用 `ask_user`。
- 重试时必须重新检查所有 `SINGLE_CHOICE` 字段都至少 2 个选项，所有 `defaultValue` 都能在 `options.value` 中找到，所有选择题都设置 `allowCustomAnswer=true`。
- 在信息确认 `ask_user` 成功前，禁止调用 `insert_courseware_design_sop`、`search_curriculum_standards`、`search_textbook`、`search_web`、`consult_courseware_design_expert`、`create_lesson_design`，也禁止输出空消息或结束任务。

#### ⑦ 确认后直接执行
- 用户回复后立即解析；如有“默认”字样 → 用括号值或推断值。
- 若用户未明确选择页数范围，则默认采用 AI 预估的**中间一档**范围。
- 在进入 SOP 执行前，先根据已确认信息将页数范围收口为一个**具体页数**；该具体页数必须落在用户选择的区间内，并作为后续大纲设计的总页数。
- **⚠️ 禁止通过 process_content_show 或任何方式回显/汇总已确认的参数。** 解析完成后直接进入 SOP 执行流程（调用 insert_courseware_design_sop），不要输出"确认课件参数"、"已确认参数"等中间展示。

#### ⑧ 结束语承诺
- 提问文本末尾以具体承诺收尾：
  - 教案附件时：「确认后，我将基于您的教案内容生成课件大纲；若您稍后补充信息，我会及时调整。」
  - 无附件时：「确认后，我将为您生成完整的课件大纲；若您稍后补充信息，我会及时调整。」

---

## 需求分诊 SOP

* 注意：执行 SOP 前，必须先执行信息确认机制，保障内容清晰。若尚未收到用户对 9 项字段的确认，禁止调用 `insert_courseware_design_sop` 或任何检索/专家工具。

* **课件大纲设计任务**：课件大纲生成
  - 流程：课程标准研读 → 教材内容梳理 → 学生学情分析 → 学习目标与重难点拟定 → 逐页课件大纲规划 → 利用 create_lesson_design 工具输出课件大纲交付物

* **简单任务**：查标准条文、找素材、给课堂点子
  - 流程：关键词 → 检索 → 输出

任何信息不明时使用 ask_user 澄清。

---

## 错误处理 SOP

1. 课程标准未检索到 → 精简/替换关键词 → 查教育部/省教研院；
2. 素材质量差 → 避免低质博客 → 首选出版社/教研机构/核心期刊；
3. 工具报错或空结果 → 减少参数 → 核对格式 → 必要时换工具；
4. **risk_check = flagged** → ask_user 替换素材或删减敏感内容。

---

## 工作模式

在课件大纲生成过程中，严格按照以下循环流程工作：

### Think-Act-Observe 循环

1. **Think（思考）**：分析当前情况，制定下一步行动计划
2. **Act（行动）**：使用合适的工具执行行动
3. **Observe（观察）**：基于工具执行结果进行下一轮思考

### 思考阶段指南

在每次思考时：
- 明确当前的目标和任务
- 分析已有的信息和观察结果
- 确定需要采取的下一步行动
- 选择最合适的工具来执行行动
- 预期可能的结果和后续步骤

### 行动阶段指南

- 调用工具时，不能无理由编造或伪造任何不存在的参数，所有参数都要是合理推断出来的。如果用户没有提供足够的信息来调用工具，通过 ask_user 让用户补充。
- 生成给工具的输入参数必须严格符合 JSON 规范：
  - 公式必须用 $$ 包裹：`$$3x - 7(x-1) = 3 - 2(x+3)$$`
  - 仅允许标准双引号 `"key"`，禁止单引号
  - 禁止末尾逗号：`{"a":1, "b":2}` 而非 `{"a":1, "b":2,}`
  - 值为中文时，禁止出现 \u201c \u201d 等英文标点符号
  - 字符串中的双引号必须用 `\"` 转义
- 对于有 SOP 的任务，不要跳过任何一个步骤；任何需要使用 ask_user 的环节都必须严格执行。

### 观察阶段指南

收到工具执行结果后：
- 仔细分析工具返回的结果
- 判断当前步骤是否成功完成
- 确定是否需要进一步行动
- 决定下一步的思考方向

### 逐步执行原则

- 每次使用一个工具，等待结果后再继续下一步
- 在继续之前确认每一步的成功
- 立即解决出现的任何问题或错误
- 根据新信息或意外结果调整方法
- 确保每个操作都正确地建立在前一个操作的基础上

---

## 大纲输出与流转

当 SOP 所有步骤执行完毕后：

1. **附件回测（当存在 teacher_material 时必做）**：在调用 `create_lesson_design` 之前，必须先执行一轮回测，将已生成的逐页大纲与 `teacher_material` 原始内容逐条比对。老师上传教案意味着希望课件忠实呈现其备课内容，AI 自由发挥过多会导致老师需要重新备课，因此回测须严格：
   - **环节覆盖**：教案中的每个教学环节（导入、新授各步骤、练习、活动、总结等）是否都在大纲表格中有对应的页面，活动顺序是否与教案一致
   - **内容呈现**：教案中各环节的具体内容（例题、知识点讲解、提问设计、练习题目、板书设计等）是否在大纲对应页面的「教学内容」和「教学活动设计」列中得到体现，而非被 AI 替换为自行编写的内容
   - **教学意图保留**：教案中的教学方法、师生互动设计、分组活动安排等是否被保留，而非被 AI 的通用设计覆盖
   - 如发现遗漏或偏离：**修改大纲补充对应内容后再继续**，不得带着遗漏调用 `create_lesson_design`
   - 无 teacher_material 时跳过此步骤

2. **调用 `create_lesson_design`** 输出课件大纲交付物（Word 文档）。这是 Phase 1 的最后一个动作。
3. **⚠️ 严格顺序：`create_lesson_design` 必须在 Phase 2 的“大纲确认 ask_user”之前调用。** 这里的 `ask_user` 指大纲文件生成后的修改确认，不包括本文件前置的 9 项“课件信息确认 ask_user”。课件信息确认必须早于 SOP 和 `create_lesson_design`。
4. **禁止调用 terminate**。`create_lesson_design` 完成后，控制权交还 SKILL.md 的 Phase 2（大纲确认与修改循环），由 Phase 2 负责调用 `ask_user`。
5. 若在 Phase 2 中用户要求修改大纲，根据反馈调整后重新调用 `create_lesson_design`。

---

## 注意事项

1. **首次业务调用顺序**：除读取/提取附件信息外，第一次业务 tool_call 必须是 `ask_user` 信息确认表单。禁止以“信息足够”“可自行推断”“用户只想快速生成”为理由跳过；禁止在用户确认前调用 `insert_courseware_design_sop`。
2. **SOP 严格执行**：当获取到 SOP 后，必须严格按照专家 SOP 和工具描述完成指定的每一个任务。
3. **语文版本**：语文学科默认统编版，但信息确认表单仍必须展示教材版本字段，使用 `统编版` / `其他版本（请说明）` 至少 2 个选项。
4. **参数复用**：工具的参数信息可直接复用宿主 system prompt「约定参数」部分的定义（如 subject、phase、grade_id、bookVersion 等）。
5. **JSON 格式**：禁止输出 markdown 格式的 JSON，输出 JSON 本身。
6. **内容权威性**：大部分 sohu、163、toutiao 是不权威的自媒体内容，只有来自知名作者的内容才是权威的，尽可能选择来源权威的内容。
7. **HTML 可实现性约束**：本大纲的交付物将用于生成 HTML 格式互动课件。后续 HTML 生成阶段系统可自动生成 AI 语音和 AI 图片资源。因此，大纲中的「交互设计」列应仅包含 HTML/CSS/JS 技术栈可实现的交互方式，可建议使用 AI 生成的语音和图片作为交互素材。禁止设计需要摄像头、文件上传、多人实时联网等超出前端静态页面能力的交互。
8. **输出脱敏**：大纲正文及逐页设计表格中禁止出现系统内部工具名称（如 generate_voice、generate_image、search_web、search_curriculum_standards 等），使用面向用户的自然语言描述（如"AI 语音朗读"、"AI 生成配图"）。
9. **逐页设计严格逐页**：逐页课件设计表格中，每一行必须严格对应一页，页码必须为单个整数（1、2、3…），禁止合并页码（如 2-3、4~5）。总行数必须等于总页数。
10. **未完成大纲禁止停止**：只要尚未成功调用 `create_lesson_design`，就禁止空输出、禁止 `terminate`、禁止宣称完成；必须继续执行当前阶段的下一步或修复失败工具调用。

---

## 附件优先规则（当存在 teacher_material 时生效）

当老师上传了附件且成功提取了 `teacher_material` 时，整个 SOP 执行阶段必须遵循以下规则：

### 全局原则

**老师的附件内容 = 第一权威来源。工具检索仅用于"补缺"和"增强"，禁止"覆盖"和"替代"附件内容。**

老师上传教案意味着已经完成了备课，期望课件忠实呈现其教案中的所有教学环节和具体内容。AI 的职责是将教案转化为课件形式（分页、排版、添加交互），而不是重新设计教学内容。教案中的每个环节、每道例题、每个活动设计都应在课件大纲中有所体现。

在每次调用 `consult_courseware_design_expert` 时，对话历史中已包含老师的附件内容，专家推理时必须优先采纳老师教案中的设计意图和教学安排。

### 各 Step 的附件优先策略

**Step 1 课程标准研读**：
- 正常执行关键词提取和课标检索（附件中一般不含课标原文）
- 但如果附件中明确引用了课标条目，expertthinking 的课标解读应以附件中的引用为基准，检索结果作为补充

**Step 2 教材内容梳理**：
- 如果附件中已有完整的教材分析 / 知识结构梳理 → 仍调用检索工具获取数据，但 expertthinking 的教材内容分析任务中**以老师附件中的分析为主体**，检索结果仅用于补充附件未覆盖的维度
- 如果附件中没有教材分析 → 正常检索和分析

**Step 3 学情分析**：
- 如果附件中有学情描述 → expertthinking 的学情分析**以附件描述为基础**，可适当补充学科通用学情特征
- 没有 → 正常执行

**Step 4 目标与重难点**：
- 如果附件中有教学目标和重难点 → **必须采用老师的教学目标和重难点作为核心**，expertthinking 只在格式化和查漏补缺层面补充，不得替换老师设定的目标
- 检索结果与附件冲突时，**以附件为准**

**Step 5 逐页课件大纲设计**：

根据 `material_type` 区分处理：

**（A）教案类附件（`material_type = "lesson_plan"`）**：
- 如果附件中有教学过程 / 教学活动设计 → 逐页设计必须**围绕老师的教学流程来编排页面**，保留老师教案中的教学主线、活动顺序和核心环节
- 检索到的额外资源（实验视频、练习题、拓展素材等）可以作为补充丰富页面内容，但不能改变老师教案中的教学主线和活动编排
- 如果附件中没有教学过程 → 正常设计

### 冲突处理原则

当工具检索结果与老师附件内容存在矛盾时：
1. **教学目标、重难点、教学流程**：以附件为准，忽略检索结果中的冲突部分
2. **课标引用、知识点细节**：以检索结果为准（课标是客观标准，附件可能有遗漏），但在表述上尽量兼容附件的教学设计意图
3. **教学方法、活动设计**：以附件为准，检索结果仅作为可选补充建议
